--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "prettier": "^2.6.2"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "morgan": "^1.10.0",
     "mysql2": "^2.3.3"
   }
 }
