added nodemon, started to work on the calls for posts, added also postman collections for the posts

--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "backend de una aplicación de photos / backend of a photos' app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.14.0",
     "faker": "^5.5.3",
+    "nodemon": "^2.0.15",
     "prettier": "^2.6.2"
   },
   "dependencies": {
