--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
-    "sharp": "^0.30.4"
+    "sharp": "^0.30.4",
+    "uuid": "^8.3.2"
   }
 }
