--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prettier": "^2.6.2"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "bcrypt": "^5.0.1",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
