--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@ MYSQL_HOST=localhost
 MYSQL_USER=
 MYSQL_PASSWORD=
 MYSQL_DATABASE=photos_app
+PORT=3000
+PUBLIC_HOST=http://localhost:3000
+SECRET=afsdhstjrtjzgfxjsj
+UPLOADS_PROFILE=profileUpload
+UPLOADS_POST=postUpload
