--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "devDependencies": {
     "eslint": "^8.14.0",
     "faker": "^5.5.3",
-    "nodemon": "^2.0.15",
+    "nodemon": "^2.0.16",
     "prettier": "^2.6.2"
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
